feat(pipeline): prompt v3 — paragraph numbering moves from the model to ncert load
The model returns section, text, figure refs and one continues-previous-page
flag per paragraph; the loader assigns ¶n per section in reading order across
pages, so two paragraphs can never share an address and the collision refusal
is gone. A blank text or a flag off the first paragraph is refused where the
output is decoded and repaired once, both attempts on the ledger; the same
rule holds the JSONL artefact, refused by page with its redo. The page-break
repairs clear the flag under a printed label and cut a repeated tail together
with anything the model invented in front of it, flagging what remains as a
continuation (ch 6 p8 of phy11-part1 is the test). The previous page's tail
shrinks to 200 characters of context. ncert load deletes the orphans of the
chapters it carries and names them, refuses the load if any is anchored, and
spares a row holding the other edition's text. The v3 template drops the
counting rules, adds the flag, keeps printed item markers and equation
parentheses, and returns no paragraphs for a unit-opener biography page; v2
stays on disk as the version phy11-part1's frozen corpus names. The Sonnet
vision profile is restored for one measurement (RULING 1 reopened). Docs:
TECH_PLAN §6.3 amendments, runbook, DECISIONS, prompt changelog, TRACKER.

Spec-auditor: FAIL → fixed (day log). 578 tests, verify green, eval gate PASS
(placeholder).

Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_018yne9DWcg8xBusQtXSiH25